--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -1,24 +1,14 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Caprixxx/ChromisPOS/blob/master/fooocus_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "VjYy0F2gZIPR",
-        "outputId": "c0d597cb-246f-4a3c-fb92-b95c77d990a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c0d597cb-246f-4a3c-fb92-b95c77d990a2"
       },
       "outputs": [
         {
@@ -188,8 +178,7 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
